--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,7 +31,33 @@ jobs:
       run: mvn -B package --file pom.xml
     - name: Run JUnit tests with Maven
       run: mvn test
+    -name: Run Java Checkstyle
+      # You may pin to the exact commit or the version.
+      # uses: nikitasavinov/checkstyle-action@79490c0fdcc3ab5dd2b50a0e82a5bfc4fe63f0a9
+      uses: nikitasavinov/checkstyle-action@0.6.0
+      with:
+        # GITHUB_TOKEN.
+        #github_token: # optional, default is ${{ github.token }}
+        # Report level for reviewdog [info,warning,error]
+        #level: # optional, default is info
+        # Reporter of reviewdog command [github-pr-check,github-pr-review]
+        #reporter: # optional, default is github-pr-check
+        # Filtering for the reviewdog command [added,diff_context,file,nofilter]. Default is `added`.
+        #filter_mode: # optional, default is added
+        # Exit code for reviewdog when errors are found [true,false] Default is `false`.
+        #fail_on_error: # optional, default is false
+        # Checkstyle config file
+        checkstyle_config: # default is google_checks.xml
+        # Checkstyle version
+        #checkstyle_version: # optional, default is 10.3
+        # Working directory relative to the root directory.
+        #workdir: # optional, default is .
+        # Tool name to use for reviewdog reporter
+        #tool_name: # optional, default is reviewdog
+        # Properties file relative to the root directory.
+        #properties_file: # optional, default is 
+        # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
+    
     #- name: Update dependency graph
     #  uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
