--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,15 +30,19 @@ jobs:
       run: mvn -B package --file pom.xml
     - name: Run JUnit tests with Maven
       run: mvn test
-    - name: Run Java Checkstyle
-      # You may pin to the exact commit or the version.
-      # uses: iwata-n/actions-checkstyle@540ec621f4c1fd765d45784b10cf262a2e19f08d
-      uses: iwata-n/actions-checkstyle@v1.0.0
+
+  checkstyle_job:
+    runs-on: ubuntu-latest
+    name: Checkstyle job
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Run check style
+      uses: nikitasavinov/checkstyle-action@master
       with:
-        rule: # optional, default is /checkstyle_rule.xml
-        result: # optional, default is ./checkstyle_result.xml
-        workdir: # optional, default is .
-        filter: # optional, default is *.java
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        reporter: 'github-pr-check'
+        tool_name: 'testtool'
     
       # You may pin to the exact commit or the version.
       # uses: nikitasavinov/checkstyle-action@79490c0fdcc3ab5dd2b50a0e82a5bfc4fe63f0a9
