--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,6 +30,8 @@ jobs:
       run: mvn -B package --file pom.xml
     - name: Run JUnit tests with Maven
       run: mvn test
+    - name: quick test
+      run: touch testfile
 
     #- name: Update dependency graph
     #  uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
