Added Firebase Dependency to pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
 			<version>5.9.2</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.google.firebase</groupId>
+			<artifactId>firebase-admin</artifactId>
+			<version>9.2.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
