--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,14 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<configuration>
+						<source>17</source>
+						<target>17</target>
+					</configuration>
+				</plugin>
+				<plugin>
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-maven-plugin</artifactId>
 				</plugin>
@@ -61,7 +69,6 @@
 					<version>3.2.0</version>
 					<configuration>
 						<configLocation>google_checks.xml</configLocation>
-						<encoding>UTF-8</encoding>
 						<consoleOutput>true</consoleOutput>
 						<failsOnError>true</failsOnError>
 						<linkXRef>false</linkXRef>
