--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,21 +31,12 @@ jobs:
     - name: Run JUnit tests with Maven
       run: mvn test
     - name: ReportGenerator
-    # You may pin to the exact commit or the version.
-    # uses: danielpalme/ReportGenerator-GitHub-Action@4d510cbed8a05af5aefea46c7fd6e05b95844c89
       uses: danielpalme/ReportGenerator-GitHub-Action@5.2.0
       with:
         # The coverage reports that should be parsed (separated by semicolon). Globbing is supported.
-        reports: target/site/jacoco/jacoco.xml # default is coverage.xml
-        # The directory where the generated report should be saved.
-        # targetdir: # default is coveragereport
-        # The output formats and scope (separated by semicolon) Values: Badges, Clover, Cobertura, CsvSummary, Html, HtmlChart, HtmlInline, HtmlInline_AzurePipelines, HtmlInline_AzurePipelines_Dark, HtmlSummary, Html_BlueRed_Summary, JsonSummary, Latex, LatexSummary, lcov, MHtml, SvgChart, SonarQube, TeamCitySummary, TextSummary, Xml, XmlSummary
+        reports: target/site/jacoco/jacoco.xml
         reporttypes: HtmlInline;Cobertura;TextSummary
-        # Optional directories which contain the corresponding source code (separated by semicolon). The source directories are used if coverage report contains classes without path information.
-        sourcedirs: src/main/java/com/dev/sweproject # optional, default is 
-        # The verbosity level of the log messages. Values: Verbose, Info, Warning, Error, Off
-        # verbosity: # optional, default is Info
-        # Optional title.
+        sourcedirs: src/main/java/com/dev/sweproject
         title: JaCoCo code coverage report
     - name: JaCoCoSummary
       run: cat coveragereport/Summary.txt
