--- a/pom.xml
+++ b/pom.xml
@@ -114,24 +114,25 @@
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.11</version>
+
 				<executions>
 					<execution>
+						<id>default-prepare-agent</id>
 						<goals>
 							<goal>prepare-agent</goal>
 						</goals>
 					</execution>
 					<execution>
-						<id>report</id>
-						<phase>test</phase>
+						<id>default-report</id>
+						<phase>prepare-package</phase>
 						<goals>
 							<goal>report</goal>
 						</goals>
 					</execution>
 				</executions>
+
 				<configuration>
 					<excludes>
-						<exclude>com/dev/sweproject/RegisterClientResponse.java</exclude>
-						<exclude>com/dev/sweproject/ByteArrayMultipart.java</exclude>
 						<exclude>com/dev/sweproject/SweProjectApplication.java</exclude>
 					</excludes>
 				</configuration>
