--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,3 +40,23 @@ jobs:
         title: JaCoCo code coverage report
     - name: JaCoCoSummary
       run: cat coveragereport/Summary.txt
+    - name: RunStaticAnalysis
+      uses: sscpac/statick-action@v0.9.2
+      with:
+        # Fail on any Statick warning
+        check: false
+        # Configuration
+        # config: # optional, default is config.yaml
+        # Scan level to use.  Overrides levels specified by the profile.
+        # level: # optional
+        # Log verbosity level
+        # log_level: # optional, default is INFO
+        # Path to store output logs
+        # output_path: # optional, default is /tmp/statick_output
+        # Path to search for files
+        package_path: src/main/java/com/dev/sweproject # optional, default is .
+        # Profile configuration
+        # profile: # optional, default is profile.yaml
+        # Paths (comma delimited) for user-defined configuration
+        # user_paths: # optional
+          
