Try using SpotBugs to do static analysis instead of statick.

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -40,23 +40,37 @@ jobs:
         title: JaCoCo code coverage report
     - name: JaCoCoSummary
       run: cat coveragereport/Summary.txt
-    - name: RunStaticAnalysis
-      uses: sscpac/statick-action@v0.9.2
+    - name: Publish SpotBugs report
+      uses: lcollins/spotbugs-github-action@v2.0.0
       with:
-        # Fail on any Statick warning
-        check: false
-        # Configuration
-        # config: # optional, default is config.yaml
-        # Scan level to use.  Overrides levels specified by the profile.
-        # level: # optional
-        # Log verbosity level
-        # log_level: # optional, default is INFO
-        # Path to store output logs
-        # output_path: # optional, default is /tmp/statick_output
-        # Path to search for files
-        package_path: src/main/java/com/dev/sweproject # optional, default is .
-        # Profile configuration
-        # profile: # optional, default is profile.yaml
-        # Paths (comma delimited) for user-defined configuration
-        # user_paths: # optional
+        # A file, directory or wildcard pattern that describes where to find the reports
+        path: src/main/java/com/dev/sweproject
+        # Check run name under which the report is created
+        # name: # optional, default is SpotBugs
+        # Check run title under which the report is created
+        # title: # optional, default is SpotBugs Source Code Analyzer report
+        # Personal access token (PAT) used to fetch the repository. The PAT is configured with the local git config, which enables your scripts to run authenticated git commands. The post-job step removes the PAT. We recommend using a service account with the least permissions necessary. Also when generating a new PAT, select the least scopes necessary. [Learn more about creating and using encrypted secrets](https://help.github.com/en/actions/automating-your-workflow-with-github-actions/creating-and-using-encrypted-secrets)
+        # token: # optional, default is ${{ github.token }}
+          
+    
+    
+    # - name: RunStaticAnalysis
+    #   uses: sscpac/statick-action@v0.9.2
+    #   with:
+    #     # Fail on any Statick warning
+    #     check: false
+    #     # Configuration
+    #     # config: # optional, default is config.yaml
+    #     # Scan level to use.  Overrides levels specified by the profile.
+    #     # level: # optional
+    #     # Log verbosity level
+    #     # log_level: # optional, default is INFO
+    #     # Path to store output logs
+    #     # output_path: # optional, default is /tmp/statick_output
+    #     # Path to search for files
+    #     package_path: src/main/java/com/dev/sweproject # optional, default is .
+    #     # Profile configuration
+    #     # profile: # optional, default is profile.yaml
+    #     # Paths (comma delimited) for user-defined configuration
+    #     # user_paths: # optional
           
