Add SpotBugs Maven plugin

--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,23 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>com.github.spotbugs</groupId>
+				<artifactId>spotbugs-maven-plugin</artifactId>
+				<version>4.8.1.0</version>
+				<configuration>
+					<relaxed></relaxed>
+					<sarifOutput>true</sarifOutput>
+					<sarifOutputFilename>spotbugs_sarif.json</sarifOutputFilename>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>com.github.spotbugs</groupId>
+						<artifactId>spotbugs</artifactId>
+						<version>4.8.1</version>
+					</dependency>
+				</dependencies>
+			</plugin>
 		</plugins>
 	</build>
 </project>
