added jacoco exclusion rule for ByteArrayMultipart

--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,7 @@
 				<configuration>
 					<excludes>
 						<exclude>com/dev/sweproject/SweProjectApplication*</exclude>
+						<exclude>com/dev/sweproject/ByteArrayMultipart*</exclude>
 					</excludes>
 				</configuration>
 			</plugin>
