Implemented External Integration Testing for Firebase DB for CRUD operations, all files are style checker compliant.

--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,7 @@
 				<version>3.2.0</version>
 				<configuration>
 					<configLocation>google_checks.xml</configLocation>
+					<includeTestSourceDirectory>true</includeTestSourceDirectory>
 					<consoleOutput>true</consoleOutput>
 					<failsOnError>true</failsOnError>
 					<linkXRef>false</linkXRef>
