--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -49,5 +49,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install Newman
       run: npm install -g newman
+    - name: Set Working Directory
+      run: cd postman
     - name: Run Postman Tests
       run: newman run postman/postman_tests.json
