Addressed Priority 3 & 4 issues adjusted pom to only track priority 3 or higher moving forward (medium risk or higher)

--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,7 @@
 				<configuration>
 					<printFailingErrors>true</printFailingErrors>
 					<verbose>true</verbose>
+					<minimumPriority>3</minimumPriority>
 					<rulesets>
 						<ruleset>/category/java/errorprone.xml</ruleset>
 						<ruleset>/rulesets/java/maven-pmd-plugin-default.xml</ruleset>
